bug on mobile nav when clicking X icon trying to find a fix

--- a/src/app/components/global/navbar.module.css
+++ b/src/app/components/global/navbar.module.css
@@ -143,7 +143,7 @@
     position: relative;
 
     @media (max-width: 768px) {
-        padding-top: 4px;
+        padding-top: 8px;
     }
 }
 
